--- a/frontend/latencyzero_client/src/app/auth/pages/register-page/register-page.html
+++ b/frontend/latencyzero_client/src/app/auth/pages/register-page/register-page.html
@@ -1,1 +1,115 @@
-<p>register-page works!</p>
+<div class="mb-6">
+  <h1 class="mb-1 text-2xl text-white">Crear una cuenta</h1>
+  <p class="text-sm text-slate-400">Regístrate para continuar</p>
+</div>
+
+<form class="space-y-6" autocomplete="off" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+
+  <!-- Username field -->
+  <div>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-4 text-slate-500 pointer-events-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+          <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+        </svg>
+      </div>
+      <input type="text" id="username" placeholder=" "
+        [class]="formUtils.isValidField(registerForm, 'username') ? 'border-red-600' : 'border-slate-600'"
+        class="w-full py-3 pl-11 pr-4 bg-slate-900/50 border rounded-xl text-slate-50 outline-none transition-colors group__input"
+        formControlName="username">
+      <label
+        class="absolute top-3.5 left-11 text-slate-400 rounded transition-all duration-300 pointer-events-none group__label">
+        Usuario o correo
+      </label>
+    </div>
+    @if (formUtils.isValidField(registerForm, 'username')) {
+    <span class="m-1 text-sm text-red-600">
+      {{ formUtils.getFieldError(registerForm, "username") }}
+    </span>
+    }
+  </div>
+
+  <!-- Email field -->
+  <div>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-4 text-slate-500 pointer-events-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+          <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+        </svg>
+      </div>
+      <input type="text" id="email" placeholder=" "
+        [class]="formUtils.isValidField(registerForm, 'email') ? 'border-red-600' : 'border-slate-600'"
+        class="w-full py-3 pl-11 pr-4 bg-slate-900/50 border rounded-xl text-slate-50 outline-none transition-colors group__input"
+        formControlName="email">
+      <label
+        class="absolute top-3.5 left-11 text-slate-400 rounded transition-all duration-300 pointer-events-none group__label">
+        Email
+      </label>
+    </div>
+    @if (formUtils.isValidField(registerForm, 'email')) {
+    <span class="m-1 text-sm text-red-600">
+      {{ formUtils.getFieldError(registerForm, "email") }}
+    </span>
+    }
+  </div>
+
+  <!-- Password field -->
+  <div>
+    <div class="relative">
+      <div class="absolute inset-y-0 left-0 flex items-center pl-4 text-slate-500 pointer-events-none">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect width="18" height="11" x="3" y="11" rx="2" ry="2"></rect>
+          <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+        </svg>
+      </div>
+      <input id="password" placeholder=" " [type]="showPassword ? 'text' : 'password'"
+        [class]="formUtils.isValidField(registerForm, 'password') ? 'border-red-600' : 'border-slate-600'"
+        class="w-full py-3 pl-11 pr-12 bg-slate-900/50 border rounded-xl text-slate-50 outline-none transition-colors group__input"
+        formControlName="password">
+      <label
+        class="absolute top-3.5 left-11 text-slate-400 rounded transition-all duration-300 pointer-events-none group__label">
+        Contraseña
+      </label>
+      <button type="button" (click)="togglePasswordVisibility()"
+        [class]="showPassword ? 'text-slate-300' : 'text-slate-500'"
+        class="absolute inset-y-0 right-0 flex items-center pr-4 hover:text-slate-300 transition-colors cursor-pointer">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+          stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"></path>
+          <circle cx="12" cy="12" r="3"></circle>
+        </svg>
+      </button>
+    </div>
+
+    @if (formUtils.isValidField(registerForm, 'password')) {
+    <span class="m-1 text-sm text-red-600">
+      {{ formUtils.getFieldError(registerForm, "password") }}
+    </span>
+    }
+  </div>
+
+  <!-- Submit button -->
+  <button type="submit"
+    class="w-full flex items-center justify-center gap-2 py-3.5 px-4 bg-yellow-500 hover:bg-yellow-400 rounded-xl font-serif font-semibold text-slate-950 transition-all hover:shadow-2xl cursor-pointer">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+      stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path>
+      <polyline points="10 17 15 12 10 7"></polyline>
+      <line x1="15" x2="3" y1="12" y2="12"></line>
+    </svg>
+    Crear cuenta
+  </button>
+</form>
+
+<!-- Register link -->
+<p class="mt-8 text-sm text-center text-slate-400">
+  ¿Ya tienes una cuenta?
+  <a routerLink="/auth/login" class="font-medium text-yellow-500 hover:text-yellow-400 transition-colors cursor-pointer">
+    Iniciar sesión
+  </a>
+</p>
