--- a/frontend/latencyzero_client/src/app/features/hardvision/pages/hard-vision-page/hard-vision-page.html
+++ b/frontend/latencyzero_client/src/app/features/hardvision/pages/hard-vision-page/hard-vision-page.html
@@ -1,3 +1,4 @@
+<ng-toast top-left="true"></ng-toast>
 <div class="min-h-screen flex flex-col bg-slate-950 w-full text-slate-50 relative overflow-hidden">
   <!-- Background effects -->
   <div class="absolute inset-0 z-0 pointer-events-none">
