--- a/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
+++ b/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
@@ -29,6 +29,10 @@
         Iniciar Sesión
       </button>
     </div>
+    <li class="flex items-center gap-2 m-2 p-2 bg-red-700 hover:bg-red-600 text-white rounded cursor-pointer" (click)="logout()">
+                <span class="material-icons-outlined">logout</span>
+                <span class="font-medium">Cerrar sesión</span>
+            </li>
   </nav>
 
   <main class="relative z-10 flex-1 container mx-auto px-6 py-8 sm:py-12 flex flex-col gap-10">
