--- a/frontend/latencyzero_client/src/app/features/hardvision/components/analysis-result/analysis-result.component.html
+++ b/frontend/latencyzero_client/src/app/features/hardvision/components/analysis-result/analysis-result.component.html
@@ -83,7 +83,7 @@
     </div>
 
     <!-- GRÁFICO DE PROBABILIDADES -->
-    <div *ngIf="result.confidences" class="border-b border-slate-800 pb-8">
+    <div *ngIf="result.confidences" class=" pb-8">
       <h3 class="text-lg font-semibold mb-6 text-white tracking-tight">Probabilidad del modelo</h3>
 
       <div class="bg-slate-900 p-6 rounded-xl border border-slate-800">
