--- a/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
+++ b/frontend/latencyzero_client/src/app/layout/main-layout-component/main-layout-component.html
@@ -7,7 +7,9 @@
 
   <navbar-component></navbar-component>
 
-  <router-outlet></router-outlet>
+  <div class="flex-1">
+    <router-outlet></router-outlet>
+  </div>
 
   <footer-component></footer-component>
 
