--- a/frontend/latencyzero_client/src/app/layout/components/navbar-component/navbar-component.html
+++ b/frontend/latencyzero_client/src/app/layout/components/navbar-component/navbar-component.html
@@ -1,6 +1,8 @@
 <nav
   class="relative z-50 w-full border-b border-slate-800 bg-slate-900/80 backdrop-blur-md px-6 py-4 flex justify-between items-center transition-all">
 
+  <div class="absolute bottom-0 left-1/2 -translate-x-1/2 w-96 h-px bg-linear-to-r from-transparent via-yellow-500/40 to-transparent"></div>
+
   <a routerLink="/"
     class="font-serif inline-flex items-center gap-3 rounded-lg focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-yellow-500">
     <div class="flex items-center justify-center">
