--- a/frontend/latencyzero_client/src/app/features/home/pages/home-page/home-page.html
+++ b/frontend/latencyzero_client/src/app/features/home/pages/home-page/home-page.html
@@ -48,7 +48,7 @@
       >
         <img src="assets/svg/docs.svg" alt="Componentes" />
       </div>
-      <h3 class="text-lg font-semibold text-white mb-2">Documentación</h3>
+      <h3 class="text-lg font-semibold text-white mb-2">Docs</h3>
       <p class="text-sm text-slate-400">
         Guías detalladas, tutoriales y recursos para aprender sobre PCs.
       </p>
